sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:4: error: '=' expected but ';' found.
	var i;
             ^